--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ description: 作ったものの一覧と備忘録
 
 # if it's an external image, update below for true
 # better with square images
-external-image: false
+external-image: true
 picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: false
-resume-external: true
+resume-external: false
 resume-url: https://google.com/?q=my+resume
 
 #TODO:: URLを変更する
