--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,8 @@ description: 作ったものの一覧と備忘録
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
+external-image: false
 picture: assets/images/profile.jpg
-
-# If you want to include your resume, set to true
-# and specify source (external or local).
-resume: false
-resume-external: false
-resume-url: https://google.com/?q=my+resume
 
 #TODO:: URLを変更する
 url: https://sergiokopplin.github.io/indigo
