--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ external-image: false
 picture: assets/images/profile.jpg
 
 #TODO:: URLを変更する
-url: https://sergiokopplin.github.io/indigo
+url: https://piropiro-piro.github.io/Webbbbbbb-site/
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
