--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ external-image: false
 picture: assets/images/profile.jpg
 
 #TODO:: URLを変更する
-url: https://piropiro-piro.github.io/site/
+url: https://webbbbbbb.com/
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -120,6 +120,7 @@ compress_html:
 
 exclude:
   [
+    "README.md"
     "travis.sh",
     "Gemfile",
     "Gemfile.lock",
