--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ external-image: false
 picture: assets/images/profile.jpg
 
 #TODO:: URLを変更する
-url: https://webbbbbbb.com/
+url: https://webbbbbbb.com
 
 permalink: /:title/
 
