どみどみどみなんとです

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ authors:
 
   evange_:
     name: どみどみどみなんと☆
-    bio: 社長(仮)です
+    bio: どみどみどみなんとです
     external-image: false
     picture: assets/images/profile/profile_evange_.jpg
     twitter: evange_
