authors を追加した。

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,13 @@ authors:
     picture: assets/images/profile/profile_evange_.jpg
     twitter: evange_
 
+  evange_:
+    name: yakkuru
+    bio: ネットワーク全然分かんない
+    external-image: false
+    picture: assets/images/profile/profile_yakkuru.jpg
+    twitter: Re_yasuyR4th
+
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
