名前を間違えていたので修正。

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ authors:
     picture: assets/images/profile/profile_evange_.jpg
     twitter: evange_
 
-  evange_:
+  yakkuru:
     name: yakkuru
     bio: ネットワーク全然分かんない
     external-image: false
