ちょっと変更(小声)

--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,8 @@ authors:
     twitter: PATRIOT_OPIA
 
   evange_:
-    name: どみどみどみなんと☆
-    bio: どみどみどみなんとです
+    name: evange-domi
+    bio: ボスです
     external-image: false
     picture: assets/images/profile/profile_evange_.jpg
     twitter: evange_
