ちょっと隠す

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ twitter: WebbbbbbbDev
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: evange-domi
+# github: evange-domi
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
